# oak_ffc_4p_ros_driver

./: CMakeLists.txt  oak_ffc_4p.cpp  oak_ffc_4p.h  oak_ffc_4p_node.cpp  package.xml  test.cpp
cfg/: dynConfig.cfg
launch/: OV9782.launch  cap_sensors.launch
scripts/: record_data.sh
